--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ matrix:
             - doxygen
             - graphviz
             - binutils-dev
+            - python3-pip
             - uuid-dev
     - os: linux
       compiler: clang
@@ -34,6 +35,7 @@ matrix:
             - doxygen
             - graphviz
             - binutils-dev
+            - python3-pip
             - uuid-dev
     - os: osx
       compiler: clang
