--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -50,8 +50,8 @@ install:
   - '%command% "cmake --version"'
   # gil
   - set PATH=C:\Python37;C:\Python37\Scripts;%PATH%
-  - pip install --upgrade pip
-  - pip install gil
+  - pip3 install --upgrade pip
+  - pip3 install gil
   - cd sample
   - gil update
 
