--- a/.travis.yml
+++ b/.travis.yml
@@ -70,6 +70,7 @@ before_install:
   - git config --global push.default simple
   # gil
   - pip3 install --upgrade pip
+  - pip3 install setuptools
   - pip3 install gil
   - cd sample
   - gil update
