--- a/.travis.yml
+++ b/.travis.yml
@@ -1,51 +1,58 @@
 # Programming language definition
 language: cpp
 
+# OS environment
+dist: xenial
+
 # Build matrix (OS, compiler)
 matrix:
   include:
-    - os: linux
+    - name: "Linux (GCC compiler)"
+      os: linux
       compiler: gcc
-      env: OS=linux COMPILER=gcc GCC_VERSION=8
+      env: OS=linux COMPILER=gcc GCC_VERSION=9
       addons:
         apt:
           sources:
             - ubuntu-toolchain-r-test
           packages:
-            - gcc-8
-            - g++-8
+            - gcc-9
+            - g++-9
             - cmake
             - doxygen
             - graphviz
             - binutils-dev
+            - python3
             - python3-pip
             - python3-setuptools
             - uuid-dev
-    - os: linux
+          update: true
+    - name: "Linux (Clang compiler)"
+      os: linux
       compiler: clang
-      env: OS=linux COMPILER=clang CLANG_VERSION=7
+      env: OS=linux COMPILER=clang CLANG_VERSION=8
       addons:
         apt:
           sources:
             - ubuntu-toolchain-r-test
-            - llvm-toolchain-trusty-7
+            - llvm-toolchain-xenial-8
           packages:
-            - clang-7
+            - clang-8
             - libstdc++-8-dev
             - cmake
             - doxygen
             - graphviz
             - binutils-dev
+            - python3
             - python3-pip
             - python3-setuptools
             - uuid-dev
-    - os: osx
+          update: true
+    - name: "MacOS"
+      os: osx
       compiler: clang
       env: OS=osx COMPILER=clang
-
-# OS environment
-sudo: required
-dist: xenial
+      osx_image: xcode11
 
 # Branches to build
 branches:
