--- a/.travis.yml
+++ b/.travis.yml
@@ -78,11 +78,13 @@ before_install:
   - pip3 install gil
   - cd sample
   - gil update
+  # travis-pls
+  - pip3 install travispls
 
 # Build scripts
 script: 
   - cd CppLogging/build
-  - ./unix.sh
+  - travis-pls ./unix.sh
 
 # Don't send notifications on success
 notifications:
