--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -14,16 +14,13 @@ jobs:
       - name: "Setup cmake"
         run: cmake --version
 
-      - name: "Change directory: sample"
-        run: cd sample
-
       - name: "Setup gil"
         run: |
           pip3 install gil
+          cd sample
           gil update
 
-      - name: "Change directory: build"
-        run: cd build
-
       - name: "Build"
-        run: unix.sh
+        run: |
+          cd build
+          unix.sh
