Add GitHub build workflow

--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -22,5 +22,5 @@ jobs:
 
       - name: "Build"
         run: |
-          cd CppLogging/build
+          cd sample/CppLogging/build
           unix.sh
