--- a/.github/workflows/build-windows-msys2.yml
+++ b/.github/workflows/build-windows-msys2.yml
@@ -38,5 +38,5 @@ jobs:
           INCLUDE: C:\msys64\usr\include\w32api
           LIB: C:\msys64\usr\lib\w32api
         run: |
-          cd CppLogging/build
+          cd sample/CppLogging/build
           unix.sh
