--- a/.github/workflows/build-windows-msys2.yml
+++ b/.github/workflows/build-windows-msys2.yml
@@ -39,4 +39,4 @@ jobs:
           LIB: C:\msys64\usr\lib\w32api
         run: |
           cd sample/CppLogging/build
-          unix.sh
+          ./unix.sh
