--- a/.github/workflows/build-windows-mingw.yml
+++ b/.github/workflows/build-windows-mingw.yml
@@ -29,4 +29,4 @@ jobs:
           LIB: C:\ProgramData\chocolatey\lib\mingw\tools\install\mingw64\x86_64-w64-mingw32\lib
         run: |
           cd sample/CppLogging/build
-          mingw.bat
+          ./mingw.bat
