--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "gil"
-version = "1.22.0.0"
+version = "1.23.0.0"
 description = "Gil (git links) tool"
 readme = "README.md"
 requires-python = ">=3.7"
@@ -26,5 +26,6 @@ documentation = "https://github.com/chronoxor/gil"
 repository = "https://github.com/chronoxor/gil"
 
 [tool.setuptools]
+script-files = ["gil.py", "gil.bat", "gil"]
 platforms = ["Linux", "MacOS", "Windows"]
 py-modules = []
