--- a/.github/workflows/build-windows-cygwin.yml
+++ b/.github/workflows/build-windows-cygwin.yml
@@ -19,9 +19,9 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: "Setup Cygwin"
-        uses: egor-tensin/setup-cygwin@v3
+        uses: cygwin/cygwin-install-action@v2
         with:
-          platform: x64
+          platform: x86_64
           packages: automake make cmake gcc-g++ doxygen graphviz libssl-devel libuuid-devel
 
       - name: "Setup cmake"
